--- a/.gitmodules
+++ b/.gitmodules
@@ -42,7 +42,7 @@
 	url = https://github.com/tpope/vim-surround
 [submodule "bundle/puppet"]
 	path = bundle/puppet
-	url = https://github.com/rodjek/vim-puppet/
+	url = https://github.com/rodjek/vim-puppet
 [submodule "bundle/solarized"]
 	path = bundle/solarized
 	url = https://github.com/altercation/vim-colors-solarized
