--- a/.gitmodules
+++ b/.gitmodules
@@ -19,15 +19,9 @@
 [submodule "bundle/endwise"]
 	path = bundle/endwise
 	url = https://github.com/tpope/vim-endwise
-[submodule "bundle/command-t"]
-	path = bundle/command-t
-	url = https://github.com/wincent/Command-T
 [submodule "bundle/coffee-script"]
 	path = bundle/coffee-script
 	url = https://github.com/kchmck/vim-coffee-script
-[submodule "bundle/commentary"]
-	path = bundle/commentary
-	url = https://github.com/tpope/vim-commentary
 [submodule "bundle/tabular"]
 	path = bundle/tabular
 	url = https://github.com/godlygeek/tabular
@@ -82,3 +76,60 @@
 [submodule "bundle/vim-twig"]
 	path = bundle/vim-twig
 	url = git@github.com:beyondwords/vim-twig.git
+[submodule "bundle/PIV"]
+	path = bundle/PIV
+	url = git@github.com:spf13/PIV.git
+[submodule "bundle/tagbar"]
+	path = bundle/tagbar
+	url = git@github.com:majutsushi/tagbar.git
+[submodule "bundle/nerdcommenter"]
+	path = bundle/nerdcommenter
+	url = git@github.com:scrooloose/nerdcommenter.git
+[submodule "bundle/neocomplcache"]
+	path = bundle/neocomplcache
+	url = git@github.com:Shougo/neocomplcache.git
+[submodule "bundle/vim-autoclose"]
+	path = bundle/vim-autoclose
+	url = git@github.com:spf13/vim-autoclose.git
+[submodule "bundle/vim-powerline"]
+	path = bundle/vim-powerline
+	url = git@github.com:Lokaltog/vim-powerline.git
+[submodule "bundle/sessionman.vim"]
+	path = bundle/sessionman.vim
+	url = git@github.com:vim-scripts/sessionman.vim.git
+[submodule "bundle/undotree"]
+	path = bundle/undotree
+	url = git@github.com:mbbill/undotree.git
+[submodule "bundle/numbers.vim"]
+	path = bundle/numbers.vim
+	url = git@github.com:myusuf3/numbers.vim.git
+[submodule "bundle/vim-indent-guides"]
+	path = bundle/vim-indent-guides
+	url = git@github.com:nathanaelkane/vim-indent-guides.git
+[submodule "bundle/gist-vim"]
+	path = bundle/gist-vim
+	url = git@github.com:mattn/gist-vim.git
+[submodule "bundle/neosnippet"]
+	path = bundle/neosnippet
+	url = git@github.com:Shougo/neosnippet.git
+[submodule "bundle/vim-less"]
+	path = bundle/vim-less
+	url = git@github.com:groenewege/vim-less.git
+[submodule "bundle/vim-jst"]
+	path = bundle/vim-jst
+	url = git@github.com:briancollins/vim-jst.git
+[submodule "bundle/HTML-AutoCloseTag"]
+	path = bundle/HTML-AutoCloseTag
+	url = git@github.com:amirh/HTML-AutoCloseTag.git
+[submodule "bundle/vim-css3-syntax"]
+	path = bundle/vim-css3-syntax
+	url = git@github.com:hail2u/vim-css3-syntax.git
+[submodule "bundle/vim-cucumber"]
+	path = bundle/vim-cucumber
+	url = git@github.com:tpope/vim-cucumber.git
+[submodule "bundle/vim-cucumber-align-pipes"]
+	path = bundle/vim-cucumber-align-pipes
+	url = git@github.com:quentindecock/vim-cucumber-align-pipes.git
+[submodule "bundle/supertab"]
+	path = bundle/supertab
+	url = git@github.com:ervandew/supertab.git
