--- a/.gitmodules
+++ b/.gitmodules
@@ -115,6 +115,6 @@
 [submodule "bundle/neosnippet"]
 	path = bundle/neosnippet
 	url = git@github.com:Shougo/neosnippet.git
-[submodule "bundle/snipmate-snippets"]
-	path = bundle/snipmate-snippets
-	url = git@github.com:honza/snipmate-snippets.git
+[submodule "bundle/vim-snippets"]
+	path = bundle/vim-snippets
+	url = git@github.com:honza/vim-snippets.git
