--- a/.gitmodules
+++ b/.gitmodules
@@ -61,12 +61,6 @@
 [submodule "bundle/tagbar"]
 	path = bundle/tagbar
 	url = git@github.com:majutsushi/tagbar.git
-[submodule "bundle/sessionman.vim"]
-	path = bundle/sessionman.vim
-	url = git@github.com:vim-scripts/sessionman.vim.git
-[submodule "bundle/undotree"]
-	path = bundle/undotree
-	url = git@github.com:mbbill/undotree.git
 [submodule "bundle/numbers.vim"]
 	path = bundle/numbers.vim
 	url = git@github.com:myusuf3/numbers.vim.git
@@ -112,3 +106,18 @@
 [submodule "bundle/powerline"]
 	path = bundle/powerline
 	url = git@github.com:Lokaltog/powerline.git
+[submodule "bundle/ack"]
+	path = bundle/ack
+	url = git@github.com:mileszs/ack.vim.git
+[submodule "bundle/html5"]
+	path = bundle/html5
+	url = git@github.com:othree/html5.vim.git
+[submodule "bundle/session"]
+	path = bundle/session
+	url = git@github.com:vim-scripts/session.vim--Odding.git
+[submodule "bundle/gundo"]
+	path = bundle/gundo
+	url = git@github.com:dsummersl/gundo.vim.git
+[submodule "bundle/syntastic"]
+	path = bundle/syntastic
+	url = git@github.com:scrooloose/syntastic.git
