--- a/.gitmodules
+++ b/.gitmodules
@@ -46,9 +46,6 @@
 [submodule "bundle/vim-twig"]
 	path = bundle/vim-twig
 	url = git@github.com:beyondwords/vim-twig.git
-[submodule "bundle/numbers.vim"]
-	path = bundle/numbers.vim
-	url = git@github.com:myusuf3/numbers.vim.git
 [submodule "bundle/vim-jst"]
 	path = bundle/vim-jst
 	url = git@github.com:briancollins/vim-jst.git
@@ -103,3 +100,6 @@
 [submodule "bundle/colorschemes"]
 	path = bundle/colorschemes
 	url = git://github.com/flazz/vim-colorschemes.git
+[submodule "bundle/seoul256"]
+	path = bundle/seoul256
+	url = git@github.com:junegunn/seoul256.vim.git
